# cordis-cl

./: .env.example  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/server/: Dockerfile  package.json
apps/server/src/: app.ts  config.ts  main.ts
apps/server/src/db/: index.ts  migrate.ts
apps/server/src/db/migrations/: 001_initial.sql
apps/server/src/lib/: password.ts  snowflake.ts  tokens.ts
apps/server/src/modules/auth/: auth.routes.ts  auth.schema.ts  auth.service.ts
apps/server/src/modules/channels/: channels.routes.ts  channels.service.ts
apps/server/src/modules/gateway/: gateway.handler.ts  (+1 more)
apps/server/src/plugins/: auth.ts  cors.ts  websocket.ts
apps/server/src/redis/: index.ts
apps/voice/: Dockerfile  package.json
apps/voice/src/: config.ts  main.ts  peer.ts  room.ts  worker.ts
apps/voice/src/signaling/: socketHandler.ts
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  env.d.ts  main.tsx
apps/web/src/api/: auth.api.ts  client.ts  messages.api.ts  servers.api.ts
apps/web/src/hooks/: useGateway.ts
apps/web/src/lib/: gateway.ts
apps/web/src/pages/: AppPage.tsx  LoginPage.tsx  RegisterPage.tsx
apps/web/src/router/: index.tsx
apps/web/src/store/: auth.store.ts  messages.store.ts  servers.store.ts
apps/web/src/styles/: globals.css
nginx/conf.d/: README.md  cordis.conf
(+10 files in other folders)
